# AVOT-core

./: KERNEL_REFERENCE.md  README.md  avot_engine.py  avot_registry.json
AVOT-core/: README.md  avot_base.py  manifest.yaml  registry.yaml
TIPs/: TIP-001-GUARDIAN.md  TIP-002-ARCHIVIST.md  TIP-003-FABRICATOR.md  TIP-004-CONVERGENCE.md  TIP-005-SOVEREIGN-INQUIRY.md  TIP-006-TCOP.md
archivist/: index_schema.json  indexer.py  knowledge_index.json  sovereign-interface-browser-index.json
clients/: local_openai_client.py  openai_client.py
commands/: CMS-install-command.json  registry.json
constitution/: AVOT_Interface.md
contracts/: avot_interface.ts
convergence/: engine.py
core/: __init__.py  openai_bridge.py  registry.py  system_snapshot.py  tcop.py
docs/: AGENT_SPEC.md  ARCHIVIST-SCROLL.md  AVOT-Core.md  COHERENCE.md  CONVERGENCE-SCROLL.md  FABRICATOR-SCROLL.md  GUARDIAN-COHERENCE-RUBRIC.md  GUARDIAN-ETHICS-RUBRIC.md  GUARDIAN-SCROLL.md  HARMONIA-SCROLL.md  INITIATE-SCROLL.md  QUILL-SCROLL.md  SIOS-CORE.md  SOVEREIGN-ARCHITECTURE.md  TCOP-SCROLL.md  TYME-SCROLL.md
fabricator/: sandbox.py
prompts/: archivist_prompt.txt  convergence_prompt.txt  fabricator_prompt.txt  guardian_prompt.txt  harmonia_prompt.txt  initiate_prompt.txt  phase_inquiry_prompt.txt  quill_prompt.txt  tcop_prompt.txt  tyme_prompt.txt
python/: README.md  pyproject.toml
python/avot_core/: __init__.py  loader.py  models.py  registry.py  runtime.py  sib_bridge.py
registry/: signal_ledger.yaml
schemas/: state-capsule.schema.json
scripts/: avot_cli.py  cms.install-openai-wheel.sh  (+5 more)
(+36 files in other folders)
