[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avot-core"
version = "0.1.0"
description = "AVOT-core reference package for registry and runtime stubs"
authors = [{ name = "AVOT Stewardship" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools]
packages = ["avot_core"]
package-dir = {"" = "avot_core"}

[tool.setuptools.package-data]
"avot_core" = ["py.typed"]
